--- a/Internship/Project-1/stockant-project/package.json
+++ b/Internship/Project-1/stockant-project/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
     "core-js": "^3.8.3",
     "element-plus": "^2.5.6",
     "vue": "^3.2.13",
