--- a/Internship/Udemy Vue/section-18/package.json
+++ b/Internship/Udemy Vue/section-18/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stockant-project",
+  "name": "section-18",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.19",
     "core-js": "^3.8.3",
-    "element-plus": "^2.5.6",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.13",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,8 +18,6 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
