--- a/Internship/Projects/stockants/package.json
+++ b/Internship/Projects/stockants/package.json
@@ -9,9 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@syncfusion/ej2-vue-richtexteditor": "^25.1.37",
-    "ag-grid-community": "^31.2.0",
-    "ag-grid-enterprise": "^31.2.0",
+    "@tinymce/tinymce-vue": "^3.2.8",
     "autoprefixer": "^10.4.18",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
